--- a/Get Me There/edit_modal_screen.xib
+++ b/Get Me There/edit_modal_screen.xib
@@ -49,6 +49,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{46, 6}, {231, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1035241096"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -81,6 +82,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{62, 26}, {199, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="257015526"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -100,6 +102,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 46}, {281, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="603629807"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -119,6 +122,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 75}, {281, 31}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="762143439"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -154,6 +158,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 114}, {95, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="647835804"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -190,6 +195,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 165}, {95, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="977955022"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -226,6 +232,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{149, 125}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="948250692"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -245,6 +252,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{124, 176}, {186, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="98546660"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -264,6 +272,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{167, 371}, {146, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1028835996"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">2</int>
@@ -301,6 +310,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{2, 234}, {161, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="485513808"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -337,6 +347,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{164, 234}, {155, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="152905072"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -373,6 +384,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{144, 210}, {44, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="839317540"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -392,6 +404,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 416}, {146, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1047058299"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -413,6 +426,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{167, 416}, {146, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -433,6 +448,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{17, 371}, {149, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="895336278"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">1</int>
@@ -455,6 +471,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 277}, {173, 92}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="401779597"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -476,6 +493,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{181, 282}, {129, 81}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="530453752"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -487,6 +505,7 @@
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="646533151"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -607,15 +626,6 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">42</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">doneButtonPressed</string>
-						<reference key="source" ref="536831194"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">43</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -931,7 +941,174 @@
 			<nil key="sourceID"/>
 			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">edit_modal_screen</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>cancelButtonPressed:</string>
+							<string>doneButtonPressed:</string>
+							<string>doneWithKeyboard</string>
+							<string>getPhoto</string>
+							<string>goStraightControl</string>
+							<string>rightOrLeftControl</string>
+							<string>sharpOrNormalControl</string>
+							<string>takePicture</string>
+							<string>transitStopControl</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>cancelButtonPressed:</string>
+							<string>doneButtonPressed:</string>
+							<string>doneWithKeyboard</string>
+							<string>getPhoto</string>
+							<string>goStraightControl</string>
+							<string>rightOrLeftControl</string>
+							<string>sharpOrNormalControl</string>
+							<string>takePicture</string>
+							<string>transitStopControl</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">cancelButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">doneButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">doneWithKeyboard</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">getPhoto</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">goStraightControl</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">rightOrLeftControl</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">sharpOrNormalControl</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">takePicture</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">transitStopControl</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>goStraight</string>
+							<string>imageView</string>
+							<string>rightOrLeft</string>
+							<string>selectFromLibrary</string>
+							<string>sharpOrNormal</string>
+							<string>takePictureButton</string>
+							<string>textField</string>
+							<string>transitStop</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UISegmentedControl</string>
+							<string>UIImageView</string>
+							<string>UISegmentedControl</string>
+							<string>UIButton</string>
+							<string>UISegmentedControl</string>
+							<string>UIButton</string>
+							<string>UITextField</string>
+							<string>UISegmentedControl</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>goStraight</string>
+							<string>imageView</string>
+							<string>rightOrLeft</string>
+							<string>selectFromLibrary</string>
+							<string>sharpOrNormal</string>
+							<string>takePictureButton</string>
+							<string>textField</string>
+							<string>transitStop</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">goStraight</string>
+								<string key="candidateClassName">UISegmentedControl</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">imageView</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">rightOrLeft</string>
+								<string key="candidateClassName">UISegmentedControl</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">selectFromLibrary</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">sharpOrNormal</string>
+								<string key="candidateClassName">UISegmentedControl</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">takePictureButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">textField</string>
+								<string key="candidateClassName">UITextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">transitStop</string>
+								<string key="candidateClassName">UISegmentedControl</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/edit_modal_screen.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
@@ -942,7 +1119,7 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NS.key.0">left turn.png</string>
-			<string key="NS.object.0">{424, 424}</string>
+			<string key="NS.object.0">{128, 128}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
