--- a/Get Me There/UserManual.xib
+++ b/Get Me There/UserManual.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
-		<int key="IBDocument.SystemTarget">1056</int>
+		<int key="IBDocument.SystemTarget">1280</int>
 		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1617</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
 		<string key="IBDocument.AppKitVersion">1038.36</string>
 		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">534</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -25,11 +25,8 @@
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.Metadata">
-			<bool key="EncodedWithXMLCoder">YES</bool>
-			<object class="NSArray" key="dict.sortedKeys" id="0">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-			</object>
-			<reference key="dict.values" ref="0"/>
+			<string key="NS.key.0">PluginDependencyRecalculationVersion</string>
+			<integer value="1" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -57,7 +54,7 @@
 								<string key="NSFrame">{{0, 44}, {320, 460}}</string>
 								<reference key="NSSuperview" ref="612725928"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="412264286"/>
+								<reference key="NSNextKeyView"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -136,14 +133,20 @@ dWFscywgYnV0IHlvdSwgdGhlIGd1YXJkaWFuLCBrbm93IHdoYXQgdGhlIHRyYXZlbGVyIHdpbGwgcmVz
 cG9uZCBiZXN0IHRvLCBzbyB5b3UgYWxzbyBoYXZlIHRoZSBvcHRpb24gb2YgYWRkaW5nIHlvdXIgb3du
 IGF1ZGl0b3J5IGFuZCB2aXN1YWwgYWxlcnRzIHRvIGJlIHVzZWQgb24gYW55IGV2ZW50IHRoYXQgaGFz
 IGJlZW4gdHJpZ2dlcmVkIGFzIGEgdHJhbnNpdCBzdG9wIGFsb25nIHRoZSByb3V0ZS4gIA0JCQkNDQ0</string>
+								<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+									<int key="IBUIAutocapitalizationType">2</int>
+									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								</object>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<string key="name">Helvetica</string>
+									<string key="family">Helvetica</string>
+									<int key="traits">0</int>
+									<double key="pointSize">17</double>
+								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
-								</object>
-								<object class="IBUITextInputTraits" key="IBUITextInputTraits">
-									<int key="IBUIAutocapitalizationType">2</int>
-									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
 							</object>
 							<object class="IBUINavigationBar" id="412264286">
@@ -152,13 +155,13 @@ IGJlZW4gdHJpZ2dlcmVkIGFzIGEgdHJhbnNpdCBzdG9wIGFsb25nIHRoZSByb3V0ZS4gIA0JCQkNDQ0<
 								<string key="NSFrameSize">{320, 44}</string>
 								<reference key="NSSuperview" ref="612725928"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="582439108"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSMutableArray" key="IBUIItems">
+								<object class="NSArray" key="IBUIItems">
 									<bool key="EncodedWithXMLCoder">YES</bool>
 									<object class="IBUINavigationItem" id="7425448">
 										<reference key="IBUINavigationBar" ref="412264286"/>
-										<string key="IBUITitle">Title</string>
+										<string key="IBUITitle">User Manual</string>
 										<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="941762424">
 											<string key="IBUITitle">Back</string>
 											<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -173,7 +176,7 @@ IGJlZW4gdHJpZ2dlcmVkIGFzIGEgdHJhbnNpdCBzdG9wIGFsb25nIHRoZSByb3V0ZS4gIA0JCQkNDQ0<
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="582439108"/>
+						<reference key="NSNextKeyView" ref="412264286"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -219,7 +222,9 @@ IGJlZW4gdHJpZ2dlcmVkIGFzIGEgdHJhbnNpdCBzdG9wIGFsb25nIHRoZSByb3V0ZS4gIA0JCQkNDQ0<
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<reference key="object" ref="0"/>
+						<object class="NSArray" key="object" id="0">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+						</object>
 						<reference key="children" ref="1000"/>
 						<nil key="parent"/>
 					</object>
@@ -248,8 +253,8 @@ IGJlZW4gdHJpZ2dlcmVkIGFzIGEgdHJhbnNpdCBzdG9wIGFsb25nIHRoZSByb3V0ZS4gIA0JCQkNDQ0<
 						<reference key="object" ref="612725928"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="412264286"/>
 							<reference ref="582439108"/>
+							<reference ref="412264286"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -358,6 +363,6 @@ IGJlZW4gdHJpZ2dlcmVkIGFzIGEgdHJhbnNpdCBzdG9wIGFsb25nIHRoZSByb3V0ZS4gIA0JCQkNDQ0<
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">534</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
