--- a/Get Me There/edit_modal_screen.xib
+++ b/Get Me There/edit_modal_screen.xib
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<int key="IBDocument.SystemTarget">1552</int>
+		<string key="IBDocument.SystemVersion">12C3103</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
+		<string key="IBDocument.AppKitVersion">1187.34</string>
+		<string key="IBDocument.HIToolboxVersion">625.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">2083</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<string>IBUIView</string>
+			<string>IBProxyObject</string>
+			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
+			<string>IBUISegmentedControl</string>
 			<string>IBUITextField</string>
 			<string>IBUITextView</string>
-			<string>IBUISegmentedControl</string>
-			<string>IBUIButton</string>
+			<string>IBUIView</string>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -49,7 +49,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{46, 6}, {231, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1035241096"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -60,6 +59,7 @@
 						<object class="NSColor" key="IBUITextColor" id="439344638">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
+							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -81,7 +81,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{62, 26}, {199, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="257015526"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -101,7 +100,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 46}, {281, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="603629807"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -121,7 +119,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 75}, {281, 31}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="762143439"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -157,7 +154,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 114}, {95, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="647835804"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -194,7 +190,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 165}, {95, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="977955022"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -231,7 +226,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{149, 125}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="948250692"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -251,7 +245,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{124, 176}, {186, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="98546660"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -271,7 +264,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{167, 371}, {146, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1028835996"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">2</int>
@@ -309,7 +301,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{2, 234}, {161, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="485513808"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -346,7 +337,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{164, 234}, {155, 44}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="152905072"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -383,7 +373,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{144, 210}, {44, 21}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="839317540"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -403,7 +392,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 416}, {146, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1047058299"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -425,7 +413,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{167, 416}, {146, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -446,7 +433,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{17, 371}, {149, 37}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="895336278"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">1</int>
@@ -469,7 +455,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 277}, {173, 92}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="401779597"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -492,7 +477,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{181, 282}, {129, 81}}</string>
 						<reference key="NSSuperview" ref="536831194"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="530453752"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -504,7 +488,6 @@
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="646533151"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -853,7 +836,7 @@
 					<string>9.IBPluginDependency</string>
 					<string>9.IUISegmentedControlInspectorSelectedSegmentMetadataKey</string>
 				</object>
-				<object class="NSMutableArray" key="dict.values">
+				<object class="NSArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>edit_modal_screen</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -895,174 +878,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">edit_modal_screen</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>cancelButtonPressed:</string>
-							<string>doneButtonPressed:</string>
-							<string>doneWithKeyboard</string>
-							<string>getPhoto</string>
-							<string>goStraightControl</string>
-							<string>rightOrLeftControl</string>
-							<string>sharpOrNormalControl</string>
-							<string>takePicture</string>
-							<string>transitStopControl</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>cancelButtonPressed:</string>
-							<string>doneButtonPressed:</string>
-							<string>doneWithKeyboard</string>
-							<string>getPhoto</string>
-							<string>goStraightControl</string>
-							<string>rightOrLeftControl</string>
-							<string>sharpOrNormalControl</string>
-							<string>takePicture</string>
-							<string>transitStopControl</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">cancelButtonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">doneButtonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">doneWithKeyboard</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">getPhoto</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">goStraightControl</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">rightOrLeftControl</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">sharpOrNormalControl</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">takePicture</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">transitStopControl</string>
-								<string key="candidateClassName">id</string>
-							</object>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>goStraight</string>
-							<string>imageView</string>
-							<string>rightOrLeft</string>
-							<string>selectFromLibrary</string>
-							<string>sharpOrNormal</string>
-							<string>takePictureButton</string>
-							<string>textField</string>
-							<string>transitStop</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UISegmentedControl</string>
-							<string>UIImageView</string>
-							<string>UISegmentedControl</string>
-							<string>UIButton</string>
-							<string>UISegmentedControl</string>
-							<string>UIButton</string>
-							<string>UITextField</string>
-							<string>UISegmentedControl</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>goStraight</string>
-							<string>imageView</string>
-							<string>rightOrLeft</string>
-							<string>selectFromLibrary</string>
-							<string>sharpOrNormal</string>
-							<string>takePictureButton</string>
-							<string>textField</string>
-							<string>transitStop</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">goStraight</string>
-								<string key="candidateClassName">UISegmentedControl</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">imageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">rightOrLeft</string>
-								<string key="candidateClassName">UISegmentedControl</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">selectFromLibrary</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">sharpOrNormal</string>
-								<string key="candidateClassName">UISegmentedControl</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">takePictureButton</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">textField</string>
-								<string key="candidateClassName">UITextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">transitStop</string>
-								<string key="candidateClassName">UISegmentedControl</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/edit_modal_screen.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
@@ -1075,6 +891,6 @@
 			<string key="NS.key.0">left turn.png</string>
 			<string key="NS.object.0">{424, 424}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
